--- a/2.はじめてガイド/1.出品する/1.出品するには/4.画像や写真がアップロードできない.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/4.画像や写真がアップロードできない.md
@@ -1,27 +1,31 @@
 # 画像や写真がアップロードできない  
-
+<hr>
 以下の順番でお試しください。
 
-1. 画像が大きすぎる可能性があります。  
+1.画像が大きすぎる可能性があります。  
 画像を小さくしてから再度お試しください。
 
-1. アプリを再起動のうえ、再度お試しください。
+2.アプリを再起動のうえ、再度お試しください。
 
-1. ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。
+3.ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+■iosの場合
 
-    ■iosの場合
-   1. 「App Store」よりコネポケを検索
+⑴「App Store」よりコネポケを検索
 
-   1. 「アップデート」を選択  
+⑵「アップデート」を選択  
 ※最新のバージョンをご利用されている場合「アップデート」は表示されません。
 
-    ■Androidの場合
-   1. 「Playストア」よりコネポケを検索
+■Androidの場合
 
-   2. 「更新」を選択
+⑴「Playストア」よりコネポケを検索
 
-    ※機種やOSによってボタンの名称が異なる場合がございます。
+⑵「更新」を選択
+</div>
+<font color="#ff0000">※機種やOSによってボタンの名称が異なる場合がございます。
 
-    ※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。
+※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。
+</font>
 
-アプリ版をご利用できない場合はWebサイトからご利用ください
+アプリ版をご利用できない場合はWebサイトからご利用ください。
+<hr>
