--- a/1.コネポケ公式ガイド/初めての方へ/5.安全な取引を行うために.md
+++ b/1.コネポケ公式ガイド/初めての方へ/5.安全な取引を行うために.md
@@ -1,7 +1,9 @@
 # 安全な取引を行うために
 <hr>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>安全に取引を行うための注意事項</h3></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>安全に取引を行うための注意事項</b>
+</div>
 
 取引はユーザー様同士の責任で行なっていただいております。  
 いかなるトラブルが発生した際も、ユーザー様同士での解決を行なっていただいております。
@@ -13,31 +15,40 @@
 
 相手とのやり取りに<font color="#ff0000"> <b>「不安」「怪しい」</b> </font>と感じた場合は取引を中止しましょう。
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■自宅や待ち合わせ場所で取引を行う場合</h3></div>
-・家族や友人に立会いをしてもらいましょう。<br>
-・人気のない場所での取引は控えるようにしましょう。<br>
-・公共の場を待ち合わせ場所にしましょう。<br>
-・どこで、いつ取引を行うか、家族や友人に伝えておきましょう。<br>
-・携帯電話など、すぐに連絡がとれる通信機器を持参しましょう。<br>
-・身の危険を感じた場合は、すぐに警察や身の回りの人に連絡しましょう。<br>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>自宅や待ち合わせ場所で取引を行う場合</b>
+</div>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>■配送で取引を行う場合</3></div>
+- 家族や友人に立会いをしてもらいましょう。<br>
+- 人気のない場所での取引は控えるようにしましょう。<br>
+- 公共の場を待ち合わせ場所にしましょう。<br>
+- どこで、いつ取引を行うか、家族や友人に伝えておきましょう。<br>
+- 携帯電話など、すぐに連絡がとれる通信機器を持参しましょう。<br>
+- 身の危険を感じた場合は、すぐに警察や身の回りの人に連絡しましょう。<br>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>配送で取引を行う場合</b>
+</div>
 
 <font color="#ff0000">配送でのトラブルを防止するため、取引メッセージで以下の内容の確認を行なってください。</font>
 
-・配送の負担について<br>
-・配送の代金について<br>
-・配送業者の確認<br>
-・梱包の仕方について<br>
+- 配送の負担について<br>
+- 配送の代金について<br>
+- 配送業者の確認<br>
+- 梱包の仕方について<br>
 </div>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>禁止出品物のチェック</h3></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>禁止出品物のチェック</b>
+</div>
 コネポケでは24時間体制で禁止出品物のチェックをしています。
 
 コネポケ事務局の監視とユーザー様からの通報により、禁止出品物は発見次第削除しています。
 
 悪質な違法行為を行なったユーザーについては、アカウント停止の措置をとらせていただきます。
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h3>捜査機関や公的機関との連携</h3></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>捜査機関や公的機関との連携</b>
+</div>
 コネポケは犯罪防止のため捜査機関や公的機関に協力をしております。
 
 また情報提供の依頼があった際には、適切な手順により情報提供などを行います。
