--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -7,8 +7,8 @@
 主に犯罪や違法行為に使用されるものや、使用されるとみなされるものの出品を禁止します。
 </div>
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【銃砲類、刀剣類】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>銃砲類、刀剣類</b>
 </div>
 <font color="#ff0000">銃刀法違反にあたるもの<br>
 武器類とみなされるもの</font>
@@ -22,8 +22,8 @@
 上記の製造、並びに改造に関するデータ<br>
 <font color="#ff0000">※法律上の許可、登録などがあっても投稿不可</font>
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【薬物】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>薬物</b>
 </div>
 <font color="#ff0000">覚せい剤取締法、麻薬及び向精神薬取締法、あへん法、大麻取締法に違反するもの</font>
 
@@ -32,8 +32,8 @@
 
 ・毒物、劇物
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【盗難品・不正入手】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>盗難品・不正入手</b>
 </div>
 <font color="#ff0000">盗品など犯罪行為や不正な経路で入手したもの</font>
 
@@ -42,8 +42,8 @@
 ### ■主な違反商品
 ・窃盗、強盗、詐欺、恐喝、横領などの犯罪行為により取得されたもの
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【偽造品・偽ブランド品・レプリカ・模造品】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>偽造品・偽ブランド品・レプリカ・模造品</b>
 </div>
 <font color="#ff0000">偽造されているものや、偽ブランド品、正規品と確証のないもの
 
@@ -77,8 +77,8 @@
 
 <font color="#ff0000">※ハードディスクドライブ、フラッシュメモリなどの記憶媒体、ハードディスクレコーダーや、iPodなどの携帯型音楽端末等を出品する場合は、保存されている内容をすべて削除し、出品してください。</font>
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【金券、有価証券】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>金券、有価証券</b>
 </div>
 
 <font color="#ff0000">現金、金券類、カード類
@@ -124,31 +124,32 @@
 
 ・航空会社のマイレージ、その他各種ポイントカード、会員証
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【医薬品、医療機器】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>医薬品、医療機器</b>
 </div>
 
 <font color="#ff0000">医薬品医療機器等法（以下「薬機法」）などの法令違反に抵触する恐れがあるもの
 </font>
 
 ### ■主な違反商品
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
 
-・全ての医薬品
+- 全ての医薬品
 
-・一般用医薬品
+- 一般用医薬品
 
-・要指導医薬品
+- 要指導医薬品
 
-・処方箋を要する医薬品などの医療用医薬品
+- 処方箋を要する医薬品などの医療用医薬品
 
-・漢方薬
+- 漢方薬
 
-・動物用医薬品全般
+- 動物用医薬品全般
 
-・海外製の医薬品（個人輸入品を含む）
+- 海外製の医薬品（個人輸入品を含む）
 
-・医薬品に該当する成分が含まれている製品
-
+- 医薬品に該当する成分が含まれている製品
+</div>
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #fffaf0;">
 ＜医療機器＞
 
@@ -178,8 +179,8 @@
 医薬品医療機器等法（薬機法）については こちら もご覧ください。
 </div>
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【許認可のない化粧品類や美容品】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>許認可のない化粧品類や美容品</b>
 </div>
 
 <font color="#ff0000">許認可または手作りした化粧品類や美容品
@@ -201,19 +202,19 @@
 
 ・医薬品医療機器等法（薬機法）については こちら もご覧ください。
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>
-■人体、臓器、細胞、血液</b>
+人体、臓器、細胞、血液</b>
 </div>
 <font color="#ff0000">人体、臓器、細胞、血液またはそれに類するもの
 </font>
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>
-【密猟された動植物、販売禁止鳥獣】</b>
+密猟された動植物、販売禁止鳥獣</b>
 </div>
 <font color="#ff0000">密猟された動植物、販売禁止鳥獣など
 </font>
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <b>法令に抵触する、悪用される恐れのあるもの</b>
 </div>
 <font color="#ff0000">危険物や安全性に問題があるもの
@@ -263,8 +264,8 @@
 
 2019年2月1日（金）以降は、PSEマークのないモバイルバッテリーは販売禁止（流通在庫を含む）となります。詳細は 経済産業省HP をご覧ください。
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【たばこ】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>たばこ</b>
 </div>
 
 ### ■主な違反商品
@@ -275,8 +276,8 @@
 
 ・その他ニコチンやタールが含まれるもの全般
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【食料品、飲料品、アルコール類】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>食料品、飲料品、アルコール類</b>
 </div>
 <font color="#ff0000">食料品、飲料品、アルコール類で以下に該当するもの
 
@@ -304,8 +305,8 @@
 
 ・東京都の食品安全情報サイト（外部サイト）
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【法令に抵触するサプリメント類】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>法令に抵触するサプリメント類</b>
 </div>
 
 ### ■主な違反商品
@@ -324,8 +325,8 @@
 
 ・医薬品医療機器等法（薬機法）についてはこちらもご覧ください。
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【チケット類】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>チケット類</b>
 </div>
 <font color="#ff0000">記名式チケットや、個人情報の登録のあるチケット
 
@@ -340,8 +341,8 @@
 その他、上記と同等とみなされるもの
 </font>
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【象牙および希少野生動植物種の個体】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>象牙および希少野生動植物種の個体</b>
 </div>
 <font color="#ff0000">象牙および希少野生動植物種の個体などのうち、種の保存法により必要とされている登録がないもの
 </font>
@@ -356,8 +357,8 @@
 
 ・種の保存法の対象となる動植物種は、環境省のホームページなどでご確認ください。
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【危険なもの】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>危険なもの</b>
 </div>
 <font color="#ff0000">発火性のあるもの
 
@@ -374,8 +375,8 @@
 
 ・催涙スプレーなど
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【農薬】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>農薬</b>
 </div>
 
 ### ■主な違反商品
@@ -394,8 +395,8 @@
 
 ・販売の届出や販売が禁止されている農薬は、農林水産省のホームページなどでご確認ください。
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【危険ドラッグ】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>危険ドラッグ</b>
 </div>
 
 ### ■主な違反商品
@@ -406,8 +407,8 @@
 
 ※法令で販売・所持が規制されていなくても、本来と異なる用途を意図して販売することで、心身への影響が懸念される場合は投稿不可
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【自己名義でない・所有者の変更登録ができない】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>自己名義でない・所有者の変更登録ができない</b>
 </div>
 <font color="#ff0000">自己名義でないもの
 
@@ -427,8 +428,8 @@
 <hr>
 <h2> <b> <font color="#ff0000">公序良俗、モラルに反するもの</font> </b></h2>
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【18禁、アダルト関連、児童ポルノ】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>18禁、アダルト関連、児童ポルノ</b>
 </div>
 <font color="#ff0000">18禁、成人向けの商品や児童ポルノやそれに類するとみなされるもの
 </font>
@@ -479,8 +480,8 @@
 
 ・その他、上記と同等品と判断されるもの
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【青少年の保護育成上好ましくないもの】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>青少年の保護育成上好ましくないもの</b>
 </div>
 
 
@@ -524,8 +525,8 @@
 
 ・反社会的なものまたはその可能性があると当社が判断した商品
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【不衛生なもの・不快感を与えるもの】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>不衛生なもの・不快感を与えるもの</b>
 </div>
 
 ### ■主な違反商品
@@ -542,8 +543,8 @@
 
 ・投稿時点で生まれていない生体
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【物品ではないもの】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>物品ではないもの</b>
 </div>
 <font color="#ff0000">ゲームアカウントやゲーム内の通貨
 
@@ -571,8 +572,8 @@ MLM(マルチレベルマーケティング)商品
 
 ・違法行為・脱税につながる売買、公序良俗を乱す商品売買、その他、事務局にて不適切と判断した売買など
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【手元にないもの】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>手元にないもの</b>
 </div>
 
 ### ■主な違反商品
@@ -585,8 +586,8 @@ MLM(マルチレベルマーケティング)商品
 
 ・その他、手元にないと判断されるもの
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【福袋 (内包される商品の名称や写真がないもの)】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>福袋 (内包される商品の名称や写真がないもの)</b>
 </div>
 
 
@@ -598,8 +599,8 @@ MLM(マルチレベルマーケティング)商品
 
 ・その他、商品の内容が不透明、不明瞭なもの
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【携帯電話端末について】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>携帯電話端末について</b>
 </div>
 <font color="#ff0000">アクティベーションロックやネットワーク利用制限のかかった携帯端末
 
@@ -644,8 +645,8 @@ MLM(マルチレベルマーケティング)商品
 ・KDDI：ネットワーク利用制限携帯電話機について
 </div>
 
-<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
-<b>【事務局で不適切と判断されるもの】</b>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>事務局で不適切と判断されるもの</b>
 </div>
 <font color="#ff0000">以下にあたるものや、その他、事務局の判断により不適切とみなされる出品を発見した場合は、利用の制限や出品・投稿の削除をいたします。
 </font>
