--- a/1.コネポケ公式ガイド/ルールとマナー/2.コネポケで禁止されている行為.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/2.コネポケで禁止されている行為.md
@@ -9,7 +9,9 @@
 
 ## 【商品の取引全般】
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>コネポケで用意された以外の取引手段を利用および促すこと</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>コネポケで用意された以外の取引手段を利用および促すこと</b>
+</div>
 <font color="#ff0000">コネポケでは、本人確認を行いプレミアム会員に登録することで安全な取引方法をご用意しています。
 
 コネポケを利用せずに取引をした場合、相手の素性が分からない、または商品に対してお金を要求された、
@@ -36,17 +38,23 @@
 
 ・条件が合わない相手にしつこく取引きを要求する行為
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>外部サイトの取引にコネポケを利用すること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>外部サイトの取引にコネポケを利用すること</b>
+</div>
 <font color="#ff0000">無関係な外部サイトなどの取引にコネポケを利用することを禁止します。
 </font>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>禁止されている行為や出品物と知りながら取引すること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>禁止されている行為や出品物と知りながら取引すること</b>
+</div>
 <font color="#ff0000">利用規約やコネポケで禁止されている行為や出品物を見かけた場合には、商品画面の「通報」から事務局にご連絡ください。
 </font>
 
 ## 【商品の出品】
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>譲渡にあたり、法令上許可・届出・免許等が必要な商品について、許可・届出・免許等なく当該商品を出品すること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>譲渡にあたり、法令上許可・届出・免許等が必要な商品について、許可・届出・免許等なく当該商品を出品すること</b>
+</div>
 <font color="#ff0000">また、許可・届出等なく製造された商品を出品することも禁止します。
 </font>
 
@@ -57,7 +65,9 @@
 ・食品衛生法及び各地方公共団体の条例による保健所の営業許可を受けずに、許可が必要な食品類を出品する行為
 </div>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>実物の商品画像を掲載せず出品すること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>実物の商品画像を掲載せず出品すること</b>
+</div>
 <font color="#ff0000">引取前に実物の状態を十分確認できるよう、手元にある商品の画像を掲載してください。
 </font>
 
@@ -71,12 +81,16 @@
 
 ・上記に該当するとみなされるもの
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>手元にない商品を出品すること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>手元にない商品を出品すること</b>
+</div>
 
 <font color="#ff0000">取引成立後に手元に商品がないことによる取引キャンセルや配送の遅延によるトラブルを避けるため、手元にある商品のみ出品することが可能です。
 </font>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>商品でない情報の投稿（宣伝や探し物にあたる行為）</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>商品でない情報の投稿（宣伝や探し物にあたる行為）</b>
+</div>
 <font color="#ff0000">宣伝とみなされる出品や商品としての体裁を成していない出品は禁止します。
 </font>
 
@@ -88,7 +102,9 @@
 
 ・壊れていて使いみちのない物
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>商品に問題があっても返品に応じないという記載をすること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>商品に問題があっても返品に応じないという記載をすること</b>
+</div>
 <font color="#ff0000">記載箇所、投稿箇所にかかわらず、商品に問題があっても返品に応じないという記載をすることを禁止します。
 </font>
 
@@ -110,7 +126,9 @@
 
 トラブルにならないためにも、コメントや取引メッセージでしっかりと商品の詳細を伝え、お互いに納得したうえで取引を進めてください。
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>虚偽、または誤った情報を記載、設定すること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>虚偽、または誤った情報を記載、設定すること</b>
+</div>
 <font color="#ff0000">出品者や引取希望者を欺いたり、誤解を生じるような記載を禁止します。
 </font>
 
@@ -120,7 +138,9 @@
 
 ・正しい商品状態でない商品説明や設定
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>他のユーザーに誤解や迷惑を与える出品や取引をすること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>他のユーザーに誤解や迷惑を与える出品や取引をすること</b>
+</div>
 
 ### ■主な違反行為
 
@@ -140,7 +160,9 @@
 
 ## 【商品の引取】
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>引取りをする意思がなく取引を申し込むこと</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>引取りをする意思がなく取引を申し込むこと</b>
+</div>
 <font color="#ff0000">引取りをする意思がなく取引を申し込むことを禁止します。
 
 また、コメントで商品の詳細を確認せずむやみに「取引申し込み」をすることはお控えください。
@@ -161,7 +183,9 @@
 
 ## 【リクエスト】
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>常識から逸脱した商品をリクエストをすること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>常識から逸脱した商品をリクエストをすること</b>
+</div>
 
 ### ■主な違反行為
 
@@ -176,14 +200,18 @@
 
 ## 【商品の配送】
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>取引メッセージで決めた以外の方法で配送をすること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>取引メッセージで決めた以外の方法で配送をすること</b>
+</div>
 <font color="#ff0000">商品の配送については配送料が発生するため、お互いに認識を一致させることをお勧めします。
 
 ※配送については、自己責任ですのでコネポケでサポートや対応は一切しておりません。
 </font>
 ## 【その他】
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>外部サービスなどに誘導する行為</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>外部サービスなどに誘導する行為</b>
+</div>
 <font color="#ff0000">あらゆるトラブルを防止するため、コネポケ以外のサイトなどへ誘導する行為全般を禁止します。
 
 外部での取引については事務局でのサポート対象外となります。
@@ -211,7 +239,9 @@
 
 ・事務局で不適切、不健全と判断したサイトへの誘導
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>迷惑行為</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>迷惑行為</b>
+</div>
 <font color="#ff0000">お客さまの利用やサービスの運営の妨げになる迷惑行為を禁止します。
 
 お客さまの安心・安全のために、以下の行為を発見した場合はアカウント停止などの対応を行います。
@@ -234,7 +264,9 @@
 ・著作権の侵害
 </div>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>公序良俗、モラルに反する内容の投稿やコメントを行うこと</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>公序良俗、モラルに反する内容の投稿やコメントを行うこと</b>
+</div>
 <font color="#ff0000">安心・安全な取引および青少年保護・育成および衛生上の観点から、以下の行為を禁止し、
 
 発見した場合はアカウント停止などの対応を行います。
@@ -255,11 +287,15 @@
 ・その他、出品内容、記載内容などによりブルセラと誤認する可能性があると事務局が判断するもの
 </div>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>当社が提供するインターフェイスとは別の手法を用いてサービスにアクセスすること</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>当社が提供するインターフェイスとは別の手法を用いてサービスにアクセスすること</b>
+</div>
 <font color="#ff0000">コネポケでは、自動出品ツール、ならびにそれと同じとみなされるツールなどを用いての利用を禁止します。
 </font>
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>事務局で不適切と判断される行為</h2></div>
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>事務局で不適切と判断される行為</b>
+</div>
 <font color="#ff0000">以下に該当する行為やその他事務局の判断により不適切とみなされる行為は禁止します。
 
 これらの行為を発見した場合は、ご利用の制限や出品・投稿の削除をいたします。
