--- a/1.コネポケ公式ガイド/ルールとマナー/6.事務局削除・警告について.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/6.事務局削除・警告について.md
@@ -5,12 +5,14 @@
 </font>
 
 コネポケ事務局の監視とユーザー様からの通報により、以下の内容を発見した場合は削除いたします。
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #dcdcdc;">
-・誹謗中傷<br>
-・個人情報<br>
-・暴言、荒らしなどの迷惑行為<br>
-・違法行為<br>
-・違反行為<br>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>誹謗中傷</li>
+<li>個人情報</li>
+<li>暴言、荒らしなどの迷惑行為</li>
+<li>違法行為</li>
+<li>違反行為</li>
+</ul>
 </div>
 悪質な違法行為を行なったユーザーについては、警告およびアカウント停止の措置をとらせていただきます。  
 
