--- a/1.コネポケ公式ガイド/ルールとマナー/12.商品の取り扱いについて.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/12.商品の取り扱いについて.md
@@ -2,15 +2,18 @@
 <hr>
 無料で誰かにあげる物でも、引き取っていただける方が今後大切に使う商品です。
 
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc;"><h2>■以下の内容を必ずご確認ください。</h2></div>
-
-⑴ 付属品などの確認、汚れなどを落としてキレイにしてください。
-
-⑵ 衣料品は全て洗濯をしてください。
-
-⑶ 一部に故障や破損箇所がある場合は必ず商品詳細ページにご記入のうえ、コメントで相手に伝えてください。
-
-⑷ 動作確認を行なってください。
-
-⑸ 賞味期限・消費期限をご確認ください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<b>以下の内容を必ずご確認ください。</b>
+</div>
+<ol>
+<li>付属品などの確認、汚れなどを落としてキレイにしてください。</li>
+<br>
+<li>衣料品は全て洗濯をしてください。</li>
+<br>
+<li>一部に故障や破損箇所がある場合は必ず商品詳細ページにご記入のうえ、コメントで相手に伝えてください。</li>
+<br>
+<li>動作確認を行なってください。</li>
+<br>
+<li>賞味期限・消費期限をご確認ください。</li>
+</ol>
 <hr>
