--- a/1.コネポケ公式ガイド/ルールとマナー/7.不快な問い合わせへの対処について.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/7.不快な問い合わせへの対処について.md
@@ -1,14 +1,16 @@
 # 不快な問い合わせへの対処について
 <hr>
 不快な問い合わせやコメントをされた場合は対象商品ページより<font color="#ff0000">「通報」</font>ください。  
-<h2>【通報できる内容】</h2>
-<div style="padding: 5px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #dcdcdc;">
-・不適切なコメント<br>
-・規約に違反する出品<br>
-・規約に違反する行為<br>
-・法令違反の報告<br>
-・悪質ユーザーの報告<br>
-・その他<br>
+<h3>【通報できる内容】</h3>
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>不適切なコメント</li>
+<li>規約に違反する出品</li>
+<li>規約に違反する行為</li>
+<li>法令違反の報告</li>
+<li>悪質ユーザーの報告</li>
+<li>その他</li>
+</ul>
 </div>
 コネポケ事務局にて内容を確認されていただき、適切に対応いたします。
 
