--- a/2.はじめてガイド/1.出品する/1.出品するには/1.出品の流れ.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/1.出品の流れ.md
@@ -6,10 +6,11 @@
 
 ⑵ 出品画面より商品写真を登録してください。  
 カメラのアイコンを押すと、そのまま撮影することもできますし、アルバムから保存済みの写真を選択することもできます。
-<div style="padding: 10px; margin-top: 10px; margin-bottom: 10px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
-・写真は4枚まで掲載できます。
-
-・写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<ul>
+<li>写真は4枚まで掲載できます。</li>
+<li>写真は複数登録することで、商品情報を伝えやすくなりますので、できるだけ多く掲載いただくことをお勧めします。</li>
+</ul>
 </div>
 ⑶ 商品名、商品の説明、商品詳細を入力してください。
 
