--- a/2.はじめてガイド/1.出品する/1.出品するには/3.取引申し込みされてからの流れ.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/3.取引申し込みされてからの流れ.md
@@ -4,11 +4,11 @@
 
 ⑵ 取引メッセージを利用して、商品の受渡し方法や場所、日時などを取引相手と決めましょう。
 <div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
-・取引メッセージの送信方法は、【取引メッセージでやり取りをする】でご確認ください。
-
-・取引メッセージは取引相手以外は閲覧できません。
-
-・配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［出品する］＞［配送について］＞［配送時の注意］をご確認ください。
+<ul>
+<li>取引メッセージの送信方法は、【取引メッセージでやり取りをする】でご確認ください。</li>
+<li>取引メッセージは取引相手以外は閲覧できません。</li>
+<li>配送で取引を行う場合は、トラブル防止のため、［はじめてガイド］の［出品する］＞［配送について］＞［配送時の注意］をご確認ください。</li>
+</ul>
 </div>
 ⑶ 取引メッセージで決めた方法で商品を渡し、取引完了です。
 
