--- a/2.はじめてガイド/1.出品する/1.出品するには/4.画像や写真がアップロードできない.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/4.画像や写真がアップロードできない.md
@@ -1,26 +1,28 @@
 # 画像や写真がアップロードできない  
 <hr>
 以下の順番でお試しください。
-
-1.画像が大きすぎる可能性があります。  
-画像を小さくしてから再度お試しください。
-
-2.アプリを再起動のうえ、再度お試しください。
-
-3.ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。
+<ol>
+<li>画像が大きすぎる可能性があります。<br> 
+画像を小さくしてから再度お試しください。</li>  
+<br>
+<li>アプリを再起動のうえ、再度お試しください。</li>  
+<br>
+<li>ご利用のアプリケーションが最新版でない場合、以下の手順にて最新版にアップデートしてください。
+</ol>
 <div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
 ■iosの場合
-
-⑴「App Store」よりコネポケを検索
-
-⑵「アップデート」を選択  
+<ol>
+<li>「App Store」よりコネポケを検索</li>
+<br>
+<li>「アップデート」を選択</li>
 ※最新のバージョンをご利用されている場合「アップデート」は表示されません。
-
+</ol>
 ■Androidの場合
-
-⑴「Playストア」よりコネポケを検索
-
-⑵「更新」を選択
+<ol>
+<li>「Playストア」よりコネポケを検索</li>
+<br>
+<li>「更新」を選択</li>
+</ol>
 </div>
 <font color="#ff0000">※機種やOSによってボタンの名称が異なる場合がございます。
 
