--- a/2.はじめてガイド/1.出品する/1.出品するには/5.出品商品を編集する・削除する.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/5.出品商品を編集する・削除する.md
@@ -1,43 +1,47 @@
-# 出品商品を編集する/削除する  
-
+<n1>出品商品を編集する/削除する</h1>
+<hr>
 すでに出品している商品の内容を編集・削除したいときは、下書きに保存します。  
 （ログインした状態で操作可能です）
 
-## ■iOS、Androidアプリをご利用の場合
+<h2>■iOS、Androidアプリをご利用の場合</h2>
 
-### 【編集する】
-
-1. TOP画面左上の［三］を選択
-
-1. サイドメニューにある［履歴］をタップ
-
-1. 出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをタップ
-
-1. 「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップ。
-
-1. 下書きに保存されます。
-
-1. HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ
-
-1. ［下書き一覧］をタップ
-
-1. 下書き一覧ページより、編集したい投稿をタップする
-
-1. 出品画面で編集したい内容を編集する
-
-1. ［下書き保存］または［出品する］ボタンをタップ
+<h3>【編集する】</h3>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<ol>
+<li>TOP画面左上の［三］を選択</li>
+<br>
+<li>サイドメニューにある［履歴］をタップ</li>
+<br>
+<li>出品履歴［出品中］一覧より、編集したい投稿の編集アイコンをタップ</li>
+<br>
+<li>「出品を一旦停止しますか？」と表示されますので［下書き一覧へ］をタップ。</li>
+<br>
+<li>下書きに保存されます。</li>
+<br>
+<li>HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ</li>
+<br>
+<li>［下書き一覧］をタップ</li>
+<br>
+<li>下書き一覧ページより、編集したい投稿をタップする</li>
+<br>
+<li>出品画面で編集したい内容を編集する</li>
+<br>
+<li>［下書き保存］または［出品する］ボタンをタップ</li>
+</ol>
+</div>
 
 ### 【削除する】
 
 上記の(1)～(5)の手順で下書きに保存する
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+⑹［下書き一覧］をタップ
 
-6. ［下書き一覧］をタップ
+⑺下書き一覧ページより、削除したい投稿を左に向かってスライドする
 
-7. 下書き一覧ページより、削除したい投稿を左に向かってスライドする
+⑻ゴミ箱アイコンが表示されるのでタップする
 
-8. ゴミ箱アイコンが表示されるのでタップする
-
-9. 「本当に削除してよろしいですか？」と表示されますので［削除］をタップすると削除できます。
+⑼「本当に削除してよろしいですか？」と表示されますので［削除］をタップすると削除できます。
+</div>
 
 ## ■スマートフォンブラウザをご利用の場合
 
