--- a/2.はじめてガイド/1.出品する/1.出品するには/6.商品の状態について.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/6.商品の状態について.md
@@ -1,5 +1,5 @@
 # 商品の状態について
-
+<hr>
 「商品の状態」は、以下を目安に設定してください。
 
 ■新品・未使用  
@@ -14,6 +14,8 @@
 ■傷や汚れあり  
 誰がみてもわかるような大きな傷や汚れがある
 
-※掲載する商品画像は、実際に手元にある商品画像をご使用ください。
+<font color="#ff0000">※掲載する商品画像は、実際に手元にある商品画像をご使用ください。
 
 ※商品に傷や汚れがある場合は、トラブルとならないよう、それが確認できる画像を掲載したり、商品説明に詳細をご記載ください。
+</font>
+<hr>
