--- a/2.はじめてガイド/1.出品する/1.出品するには/7.出品が削除されていたら.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/7.出品が削除されていたら.md
@@ -1,5 +1,7 @@
 # 出品が削除されていたら
-
+<hr>
 コネポケでは監視スタッフが出品物のチェックをしています。
 
-コネポケ事務局の監視とユーザー様からの通報により、サイトの規約に反する投稿・カテゴリを誤っている投稿など、掲載が適切でないと判断したものにつきましては、削除させていただいております。
+<font color="#ff0000">コネポケ事務局の監視とユーザー様からの通報により、サイトの規約に反する投稿・カテゴリを誤っている投稿など、掲載が適切でないと判断したものにつきましては、削除させていただいております。
+</font>
+<hr>
