--- a/2.はじめてガイド/1.出品する/1.出品するには/8.不具合が発生した時.md
+++ b/2.はじめてガイド/1.出品する/1.出品するには/8.不具合が発生した時.md
@@ -1,33 +1,36 @@
 # 不具合が発生した時  
-  
+<hr>
 下記をお試しください。
 
-1. アプリの再インストール、または再起動をおこなってください。
+1.アプリの再インストール、または再起動をおこなってください。
 
-    ※ アプリの再インストール、再起動をしても情報が消失することはありません。  
+<font color="#ff0000">※アプリの再インストール、再起動をしても情報が消失することはありません。</font>
 
-2. ご利用のアプリケーションが最新版ではない可能性がございます。
+2.ご利用のアプリケーションが最新版ではない可能性がございます。
 
-   ご利用端末のOSをご確認のうえ、以下の手順にてアプリのアップデートをお願いいたします。  
-
-    ■iosの場合
-   1. 「App Store」よりコネポケを検索
-
-   1. 「アップデート」を選択  
-※最新のバージョンをご利用されている場合「アップデート」は表示されません。
-
-    ■Androidの場合
-   1. 「Playストア」よりコネポケを検索
-
-   2. 「更新」を選択
-
-    ※機種やOSによってボタンの名称が異なる場合がございます。
-
-    ※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。
-
+ご利用端末のOSをご確認のうえ、以下の手順にてアプリのアップデートをお願いいたします。  
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<h3>■iosの場合</h3>
+<ol>
+<li>「App Store」よりコネポケを検索</li>
+<br>
+<li>「アップデート」を選択</li><br>
+<font color="#ff0000">※最新のバージョンをご利用されている場合「アップデート」は表示されません。</font>
+</ol>
+</div>
+<div style="padding: 10px; margin-bottom: 20px; border: 1px solid #dcdcdc; background-color: #ffffe0;">
+<h3>■Androidの場合</h3>
+<ol>
+<li>「Playストア」よりコネポケを検索</li>
+<br>
+<li>「更新」を選択</li><br>
+<font color="#ff0000">※機種やOSによってボタンの名称が異なる場合がございます。<br>
+※端末によりアップデート可能なOSの限界があるため、ご利用端末によってはアップロードできない場合がございます。</font>
+</ol>
+</div>
 アプリ版をご利用できない場合はWebサイトからご利用ください。
-
----
-
+<hr>
 上記をお試しいただいても改善できない場合、下記の［コネポケ事務局へ問い合わせ］よりお問い合わせください。  
-[コネポケ事務局へ問い合わせ](mailto:support@conepoke.com)
+
+[コネポケ事務局へ問い合わせ](support@conepoke.com)
+<hr>
