--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -4,10 +4,12 @@
 法令で譲渡・所持が規制されているもの</b> </font></h2>
 
 <font size="5" color="#ff0000" font-weight="bold">法令に違反する・抵触する恐れがあるもの<br>
-法令で譲渡・所持が規制されているもの</font>
+法令で譲渡・所持が規制されているもの<br>
+size5</font>
 <br>
 <font size="4" color="#ff0000" font-weight="bold">法令に違反する・抵触する恐れがあるもの<br>
-法令で譲渡・所持が規制されているもの</font>
+法令で譲渡・所持が規制されているもの<br>
+size4</font>
 <br>
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 法令違反に抵触する恐れのあるもの
