--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -5,9 +5,9 @@
 
 <font size="5" color="#ff0000" font-weight="bold">法令に違反する・抵触する恐れがあるもの<br>
 法令で譲渡・所持が規制されているもの<br>
-size5</font>
+size5bold</font>
 <br>
-<font size="4" color="#ff0000" font-weight="bold">法令に違反する・抵触する恐れがあるもの<br>
+<font size="4" color="#ff0000">法令に違反する・抵触する恐れがあるもの<br>
 法令で譲渡・所持が規制されているもの<br>
 size4</font>
 <br>
